[package]
name = "bevy-pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10.0", features = ["wayland"] }
getset = "0.1.2"
rand = "0.8.5"
strum = { version = "0.24.1", features = ["derive", "strum_macros"] }
